src/objects/Version_ContratoServicio__c.object
<CustomObject>
    <description>Representa cada una de las versiones de una Póliza o Contrato.</description>
    <fields>
        <fullName>POLV_CAS_Activa__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POLV_CAS_Corresponde_a_HomeServe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que representa si la gestión de la póliza/contrato de un cliente asegurado corresponde a HomeServe</description>
        <label>Corresponde a HomeServe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POLV_CAS_IsGold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VESTA nos indica si la póliza de RGA es o no Oro con este campo</description>
        <label>Póliza Oro RGA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POLV_DAT_FechaFin__c</fullName>
        <description>Fecha de finalización</description>
        <label>Fecha de finalización</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POLV_DAT_FechaInicio__c</fullName>
        <description>Fecha de inicio</description>
        <label>Fecha de inicio</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POLV_DAT_Fecha_Alta_CIA__c</fullName>
        <description>Fecha/hora de alta para CIA</description>
        <label>Fecha de alta para CIA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>POLV_DIV_Capital_Contenido__c</fullName>
        <description>Capital contenido</description>
        <label>Capital Contenido</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POLV_DIV_Capital_Continente__c</fullName>
        <description>Capital continente</description>
        <label>Capital Continente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POLV_DIV_Capital_Objetos__c</fullName>
        <description>Capital objetos</description>
        <label>Capital Objetos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POLV_DIV_Importe_Franquicia__c</fullName>
        <description>Importe franquicia</description>
        <label>Importe Franquicia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POLV_FOR_Activo__c</fullName>
        <formula>POLV_LKP_PolizaContrato__r.POL_LKP_Version_Actual__c = Id</formula>
        <label>Versión Activa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POLV_FOR_Cod_Segmentacion__c</fullName>
        <formula>IF( POLV_LKP_PolizaContrato__r.POL_LKP_Compania__r.CUE_TXT_Identificador__c == $Label.IDE_SEGURCAIXA , 
IF( POLV_TXT_VIPCompany__c == &apos;A&apos; || POLV_TXT_VIPCompany__c == &apos;P&apos;|| POLV_TXT_VIPCompany__c == &apos;S&apos;,&apos;03&apos;, 
IF ( POLV_TXT_VIPCompany__c == &apos;B&apos; || POLV_TXT_VIPCompany__c == &apos;F&apos;,&apos;02&apos;, 
IF ( POLV_TXT_VIPCompany__c == &apos;N&apos;,&apos;01&apos;,&apos;01&apos;) 
) 
), 

IF( POLV_LKP_PolizaContrato__r.POL_LKP_Compania__r.CUE_TXT_Identificador__c == $Label.IDE_RGA, 
IF( POLV_CAS_IsGold__c == true , 
&apos;04&apos;, 
IF( POLV_LKP_PolizaContrato__r.POL_LKP_Compania__r.CUE_TXT_Identificador__c == $Label.IDE_NATIONALE_NETHERLANDEN, 
IF( POLV_LKP_PolizaContrato__r.POL_LKP_Producto_Cia__r.PRD_TXT_Cod_Producto__c == &apos;PH6&apos;, 
&apos;05&apos;, 
&apos;01&apos;) 
,&apos;01&apos;) 
) 
,&apos;01&apos;))</formula>
        <label>Segmentación (Código)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_FOR_Direccion__c</fullName>
        <formula>POLV_TXT_Calle__c + &quot;, &quot; + POLV_TXT_Codigo_Postal__c + &quot;,&quot; + POLV_TXT_Poblacion__c + &quot;, &quot; + TEXT(POLV_SEL_Estado_Provincia__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_FOR_Segmentacion__c</fullName>
        <formula>IF(POLV_FOR_Cod_Segmentacion__c == &apos;01&apos;, &apos;&apos;, 
IF(POLV_FOR_Cod_Segmentacion__c == &apos;02&apos;, &apos;VALOR&apos;, 
IF(POLV_FOR_Cod_Segmentacion__c == &apos;03&apos;, &apos;VIP&apos;, 
IF(POLV_FOR_Cod_Segmentacion__c == &apos;04&apos;, &apos;ORO&apos;, 
IF(POLV_FOR_Cod_Segmentacion__c == &apos;05&apos;, &apos;PREMIUM&apos;, &apos;&apos;)))) 
)</formula>
        <label>Segmentación Póliza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_LKP_PolizaContrato__c</fullName>
        <label>Póliza/Contrato</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Versiones Póliza/Contrato</relationshipLabel>
        <relationshipName>Versiones_Poliza_Contrato</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>POLV_NUM_Control_SegurCaixa__c</fullName>
        <description>Número que identifica si la póliza debe ser atendida por HomeServe u por otra compañía</description>
        <label>Control SegurCaixa</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLV_NUM_Superficie_Garaje__c</fullName>
        <description>Superficie garaje</description>
        <label>Superficie garaje</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLV_NUM_Superficie_Trastero__c</fullName>
        <description>Superficie trastero</description>
        <label>Superficie trastero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLV_NUM_Superficie_Vivienda__c</fullName>
        <description>Superficie vivienda</description>
        <label>Superficie vivienda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLV_NUM_Tipo_Transferencia__c</fullName>
        <description>Tipo de transferencia</description>
        <label>Tipo de transferencia</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLV_SEL_Estado_Provincia__c</fullName>
        <description>Provincia</description>
        <label>Provincia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Provincias</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>POLV_SEL_Idioma__c</fullName>
        <description>Idioma</description>
        <label>Idioma</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Idiomas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>POLV_SEL_Pais__c</fullName>
        <description>País</description>
        <label>País</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Paises</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>POLV_SEL_Tipo_Riesgo__c</fullName>
        <description>Representa la tipología de Dirección de Riesgo dónde la póliza ampara al asegurado. El tipo de Riesgo influye en el árbol de decisión de apertura.</description>
        <label>Tipo de riesgo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_de_Riesgo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>POLV_TXT_Calle__c</fullName>
        <description>Vía/Domicilio</description>
        <label>Vía/Domicilio</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Certificado__c</fullName>
        <description>Certificado</description>
        <label>Certificado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Cod_Delegacion__c</fullName>
        <description>Código de Delegación</description>
        <label>Código de Delegación</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Cod_Sucursal__c</fullName>
        <description>Código de Sucursal</description>
        <label>Código de Sucursal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Codigo_Cliente_ING__c</fullName>
        <description>Código Cliente ING</description>
        <label>Código Cliente ING</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Codigo_Gestor_CIA__c</fullName>
        <description>Código Gestor</description>
        <label>Código Gestor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Codigo_Postal__c</fullName>
        <description>Código  Postal</description>
        <label>Código  Postal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Datos_Vivienda__c</fullName>
        <description>Datos de la vivienda</description>
        <label>Datos de la vivienda</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Identificador__c</fullName>
        <externalId>true</externalId>
        <label>Identificador Externo</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>POLV_TXT_Poblacion__c</fullName>
        <description>Población</description>
        <label>Población</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Suplemento_Poliza__c</fullName>
        <description>Suplemento en la póliza</description>
        <label>Suplemento en la póliza</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Tipo_Divisa__c</fullName>
        <description>Tipo de divisa</description>
        <label>Tipo de divisa</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_Tipo_Reg_Vivienda__c</fullName>
        <description>Tipo de régimen de vivienda</description>
        <label>Tipo de régimen de vivienda</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLV_TXT_VIPCompany__c</fullName>
        <description>Código Segmentación SegurCaixa</description>
        <label>Código Segmentación SegurCaixa</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Versión Póliza/Contrato</label>
    <nameField>
        <label>Versión Póliza</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Versiones Póliza/Contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(POLV_TXT_Identificador__c ),POLV_TXT_Identificador__c &lt;&gt; Name), true, false)</errorConditionFormula>
        <errorDisplayField>POLV_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo identificador no puede ser modificado</errorMessage>
    </validationRules>
</CustomObject>